--- a/testwork/package.json
+++ b/testwork/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
     "dotenv": "^16.4.5",
+    "font-awesome": "^4.7.0",
     "holderjs": "^2.9.9",
     "holdjs": "^1.0.0",
     "jsontokens": "^4.0.1",
@@ -22,6 +23,7 @@
     "react-bootstrap": "^2.10.4",
     "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
+    "react-froala-wysiwyg": "^4.2.2",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router": "^6.26.0",
