--- a/testwork/package.json
+++ b/testwork/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@googlemaps/js-api-loader": "^1.16.8",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
