--- a/testwork/package.json
+++ b/testwork/package.json
@@ -26,7 +26,9 @@
     "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-froala-wysiwyg": "^4.2.2",
+    "react-intersection-observer": "^9.13.1",
     "react-modal": "^3.16.1",
+    "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-router": "^6.26.0",
     "react-router-dom": "^6.26.0",
