--- a/testwork/package.json
+++ b/testwork/package.json
@@ -7,8 +7,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@googlemaps/js-api-loader": "^1.16.8",
-    "@headlessui/react": "^2.1.2",
+    "@headlessui/react": "^2.1.3",
     "@heroicons/react": "^2.1.5",
+    "@material-tailwind/react": "^2.1.10",
+    "@react-oauth/google": "^0.12.1",
+    "@stomp/stompjs": "^7.0.0",
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -24,6 +27,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-date-range": "^2.0.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-froala-wysiwyg": "^4.2.2",
     "react-intersection-observer": "^9.13.1",
@@ -32,8 +36,12 @@
     "react-redux": "^9.1.2",
     "react-router": "^6.26.0",
     "react-router-dom": "^6.26.0",
+    "react-script": "^2.0.5",
     "react-scripts": "^5.0.1",
+    "react-transition-group": "^4.4.5",
     "redux": "^5.0.1",
+    "sockjs-client": "^1.6.1",
+    "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
