--- a/testwork/package.json
+++ b/testwork/package.json
@@ -26,10 +26,12 @@
     "jsontokens": "^4.0.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-calendar": "^5.0.0",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-froala-wysiwyg": "^4.2.2",
+    "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "react-modal": "^3.16.1",
     "react-query": "^3.39.3",
